--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.bukkit</groupId>
   <artifactId>craftbukkit</artifactId>
   <packaging>jar</packaging>
-  <version>1.7.2-R0.4-SNAPSHOT</version>
+  <version>1.7.2-R0.4-tino</version>
   <name>CraftBukkit</name>
   <url>http://www.bukkit.org</url>
 
